--- a/index.html
+++ b/index.html
@@ -17,29 +17,29 @@
 
         <div class="mySlides fade">
             <div class="numbertext">1 / 6</div>
-            <img src="gdv.png" alt="gigsdev1">
+            <img src="img/gdv.png" alt="gigsdev1">
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">2 / 6</div>
-            <img src="gdv1.jpg" alt="gigsdev2">
+            <img src="img/gdv1.jpg" alt="gigsdev2">
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">3 / 6</div>
-            <img src="gdv2.jpg" alt="gigsdev3">
+            <img src="img/gdv2.jpg" alt="gigsdev3">
         </div>
         <div class="mySlides fade">
             <div class="numbertext">4 / 6</div>
-            <img src="gdv3.jpg" alt="gigsdev4">
+            <img src="img/gdv3.jpg" alt="gigsdev4">
         </div>
         <div class="mySlides fade">
             <div class="numbertext">5 / 6</div>
-            <img src="gdv4.jpg" alt="gigsdev">
+            <img src="img/gdv4.jpg" alt="gigsdev">
         </div>
         <div class="mySlides fade">
             <div class="numbertext">6 / 6</div>
-            <img src="gdv5.jpg" alt="gigsdev3">
+            <img src="img/gdv5.jpg" alt="gigsdev3">
         </div>
 
         <a class="prev" onclick="plusSlides(-1)">❮</a>
