--- a/index.html
+++ b/index.html
@@ -15,30 +15,30 @@
 <body>
     <div class="slideshow-container">
 
-        <div class="mySlides fade">
-            <div class="numbertext">1 / 6</div>
-            <img src="img/gdv.png" alt="gigsdev1">
+        <div class="Slides fade">
+            <div class="img_numb">1 / 6</div>
+            <img class='hov1' src="img/gdv.png" alt="gigsdev1">
         </div>
 
-        <div class="mySlides fade">
-            <div class="numbertext">2 / 6</div>
+        <div class="Slides fade">
+            <div class="img_numb">2 / 6</div>
             <img src="img/gdv1.jpg" alt="gigsdev2">
         </div>
 
-        <div class="mySlides fade">
-            <div class="numbertext">3 / 6</div>
+        <div class="Slides fade">
+            <div class="img_numb">3 / 6</div>
             <img src="img/gdv2.jpg" alt="gigsdev3">
         </div>
-        <div class="mySlides fade">
-            <div class="numbertext">4 / 6</div>
+        <div class="Slides fade">
+            <div class="img_numb">4 / 6</div>
             <img src="img/gdv3.jpg" alt="gigsdev4">
         </div>
-        <div class="mySlides fade">
-            <div class="numbertext">5 / 6</div>
+        <div class="Slides fade">
+            <div class="img_numb">5 / 6</div>
             <img src="img/gdv4.jpg" alt="gigsdev">
         </div>
-        <div class="mySlides fade">
-            <div class="numbertext">6 / 6</div>
+        <div class="Slides fade">
+            <div class="img_numb">6 / 6</div>
             <img src="img/gdv5.jpg" alt="gigsdev3">
         </div>
 
